--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Xavior
 subtitle:
 description: To be a better man.
-author: 昫然
+author: 叶子
 language: zh-Hans
 timezone:
 
@@ -70,5 +70,5 @@ avatar: /images/avatar.jpg
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:xrwangcn/xrwangcn.github.io.git # 这个配置为你*.github.io软件仓库clone地址
-  branch: master  #分支为master分支
+  repository: git@github.com:xrwangcn/xrwangcn.github.io.git 
+  branch: master  
