--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -17,7 +17,7 @@ rss:
 #since: 2015
 
 # icon between year and author @Footer
-authoricon: heart
+authoricon: headphones
 
 # Footer `powered-by` and `theme-info` copyright
 copyright: true
