--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -135,7 +135,9 @@ font:
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 #social:
   #LinkLabel: Link
-
+social:
+  Github: https://github.com/xrwangcn
+  Weibo: http://weibo.com/wangxuran
 
 # Social Links Icons
 # Icon Mapping:
