--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -148,7 +148,7 @@ social_icons:
   enable: true
   # Icon Mappings.
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
-  GitHub: github
+  GitHub: github-alt
   Twitter: twitter
   Weibo: weibo
 
